--- a/charts/cloudwalker-deployer/templates/serviceaccount.yaml
+++ b/charts/cloudwalker-deployer/templates/serviceaccount.yaml
@@ -2,11 +2,12 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "cloudwalker-deployer.serviceAccountName" . }}
+  name: {{ include "paved-road-service.serviceAccountName" . }}
   labels:
-    {{- include "cloudwalker-deployer.labels" . | nindent 4 }}
+    {{- include "paved-road-service.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
 {{- end }}
