--- a/charts/cloudwalker-deployer/templates/tests/test-connection.yaml
+++ b/charts/cloudwalker-deployer/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "cloudwalker-deployer.fullname" . }}-test-connection"
+  name: "{{ include "paved-road-service.fullname" . }}-test-connection"
   labels:
-    {{- include "cloudwalker-deployer.labels" . | nindent 4 }}
+    {{- include "paved-road-service.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "cloudwalker-deployer.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "paved-road-service.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
