--- a/charts/cloudwalker-deployer/values.yaml
+++ b/charts/cloudwalker-deployer/values.yaml
@@ -1,29 +1,52 @@
-# Default values for cloudwalker-deployer.
+# Default values for paved-road-service.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+# This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
 replicaCount: 1
 
+# This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
-  repository: nginx
+  repository: springio/gs-spring-boot-docker
+  # This sets the pull policy for images.
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
+# This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: []
+# This is to override the chart name.
 nameOverride: ""
 fullnameOverride: ""
 
+# This section builds out the service account more information can be found here: https://kubernetes.io/docs/concepts/security/service-accounts/
 serviceAccount:
-  # Specifies whether a service account should be created
+  # Specifies whether a service account should be created.
   create: true
-  # Annotations to add to the service account
+  # Automatically mount a ServiceAccount's API credentials?
+  automount: true
+  # Annotations to add to the service account.
   annotations: {}
   # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
+  # If not set and create is true, a name is generated using the fullname template.
   name: ""
 
+# This is for setting Kubernetes Annotations to a Pod.
+# For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/
 podAnnotations: {}
+# This is for setting Kubernetes Labels to a Pod.
+# For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
+podLabels: {}
+
+# External metadata (e.g., from Backstage) to be injected as labels
+# These labels will be applied to all Kubernetes resources (Deployment, Service, etc.)
+metadata:
+  labels: {}
+    # backstage.io/product-name: "my-product"
+    # backstage.io/team: "platform"
+    # backstage.io/owner: "team@cloudwalkersinc.com"
+    # backstage.io/cost-center: "engineering"
+    # backstage.io/application-type: "java-spring-boot"
 
 podSecurityContext: {}
   # fsGroup: 2000
@@ -36,10 +59,71 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
-service:
-  type: ClusterIP
-  port: 80
+# Environment variables for the application
+# Supports inline key-value pairs, ConfigMaps, and Secrets
+env: []
+  # - name: ENVIRONMENT
+  #   value: "production"
+  # - name: LOG_LEVEL
+  #   value: "info"
+  # - name: DATABASE_URL
+  #   valueFrom:
+  #     secretKeyRef:
+  #       name: db-credentials
+  #       key: url
+  # - name: APP_CONFIG
+  #   valueFrom:
+  #     configMapKeyRef:
+  #       name: app-config
+  #       key: config.json
 
+# Load all keys from ConfigMap as environment variables
+envFrom: []
+  # - configMapRef:
+  #     name: app-config
+  # - secretRef:
+  #     name: app-secrets
+
+# Init containers for setup tasks (DB migrations, dependency checks, etc.)
+initContainers: []
+  # - name: migration
+  #   image: myapp/migrations:latest
+  #   command: ['sh', '-c', 'npm run migrate']
+  #   env:
+  #   - name: DATABASE_URL
+  #     valueFrom:
+  #       secretKeyRef:
+  #         name: db-credentials
+  #         key: url
+
+# This is for setting up a service more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/
+service:
+  # This sets the service type more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
+  type: ClusterIP
+  # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
+  # Legacy single port (maintained for backward compatibility)
+  port: 80
+  # Multi-port configuration - supports HTTP, HTTPS, gRPC, and custom protocols
+  # Uncomment and configure for applications exposing multiple ports
+  ports:
+    - name: http
+      port: 8080
+      targetPort: 8080
+      protocol: TCP
+    # - name: https
+    #   port: 443
+    #   targetPort: 8443
+    #   protocol: TCP
+    # - name: grpc
+    #   port: 9090
+    #   targetPort: 9090
+    #   protocol: TCP
+    # - name: metrics
+    #   port: 9091
+    #   targetPort: 9091
+    #   protocol: TCP
+
+# This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
   enabled: false
   className: ""
@@ -52,9 +136,47 @@ ingress:
         - path: /
           pathType: ImplementationSpecific
   tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+    # - secretName: chart-example-tls
+    #   hosts:
+    #     - chart-example.local
+
+# -- Expose the service via gateway-api HTTPRoute
+# Requires Gateway API resources and suitable controller installed within the cluster
+# (see: https://gateway-api.sigs.k8s.io/guides/)
+httpRoute:
+  # HTTPRoute enabled.
+  enabled: false
+  # HTTPRoute annotations.
+  annotations: {}
+  # Which Gateways this Route is attached to.
+  parentRefs:
+  - name: gateway
+    sectionName: http
+    # namespace: default
+  # Hostnames matching HTTP header.
+  hostnames:
+  - chart-example.local
+  # List of rules and filters applied.
+  rules:
+  - matches:
+    - path:
+        type: PathPrefix
+        value: /headers
+  #   filters:
+  #   - type: RequestHeaderModifier
+  #     requestHeaderModifier:
+  #       set:
+  #       - name: My-Overwrite-Header
+  #         value: this-is-the-only-value
+  #       remove:
+  #       - User-Agent
+  # - matches:
+  #   - path:
+  #       type: PathPrefix
+  #       value: /echo
+  #     headers:
+  #     - name: version
+  #       value: v2
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -68,12 +190,83 @@ resources: {}
   #   cpu: 100m
   #   memory: 128Mi
 
+# This is to setup the liveness and readiness probes more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
+# Common probe paths by framework:
+# - Java/Spring Boot: /actuator/health
+# - Node.js/Express: /health or /healthz
+# - Golang: /health or /healthz
+# - Python/Flask/FastAPI: /health
+# - React (served by nginx): /
+livenessProbe:
+  httpGet:
+    path: /
+    port: http
+  initialDelaySeconds: 30
+  periodSeconds: 10
+  timeoutSeconds: 5
+  failureThreshold: 3
+readinessProbe:
+  httpGet:
+    path: /
+    port: http
+  initialDelaySeconds: 10
+  periodSeconds: 5
+  timeoutSeconds: 3
+  failureThreshold: 3
+
+# Startup probe for slow-starting applications (Java, large Python apps)
+# Protects slow starters from being killed by liveness probe
+startupProbe: {}
+  # httpGet:
+  #   path: /health
+  #   port: http
+  # initialDelaySeconds: 0
+  # periodSeconds: 10
+  # failureThreshold: 30  # 30 * 10s = 5min maximum startup time
+
+# This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
 autoscaling:
   enabled: false
   minReplicas: 1
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
+  # Scaling behavior controls how fast pods scale up/down
+  # Prevents flapping and provides more predictable scaling
+  behavior: {}
+    # scaleDown:
+    #   stabilizationWindowSeconds: 300  # Wait 5min before scaling down
+    #   policies:
+    #   - type: Percent
+    #     value: 50  # Scale down max 50% of current pods
+    #     periodSeconds: 60  # Per minute
+    #   - type: Pods
+    #     value: 2  # Or max 2 pods
+    #     periodSeconds: 60  # Per minute
+    #   selectPolicy: Min  # Use the policy that results in fewer pods removed
+    # scaleUp:
+    #   stabilizationWindowSeconds: 0  # Scale up immediately
+    #   policies:
+    #   - type: Percent
+    #     value: 100  # Scale up max 100% (double)
+    #     periodSeconds: 60  # Per minute
+    #   - type: Pods
+    #     value: 4  # Or max 4 pods
+    #     periodSeconds: 60  # Per minute
+    #   selectPolicy: Max  # Use the policy that results in more pods added
+
+# Additional volumes on the output Deployment definition.
+volumes: []
+  # - name: foo
+  #   secret:
+  #     secretName: mysecret
+  #     optional: false
+
+# Additional volumeMounts on the output Deployment definition.
+volumeMounts: []
+  # - name: foo
+  #   mountPath: "/etc/foo"
+  #   readOnly: true
 
 nodeSelector: {}
 
